--- a/19.diving-into-redux/package.json
+++ b/19.diving-into-redux/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5"
+    "@reduxjs/toolkit": "^1.5.1",
+    "react-redux": "^7.2.3"
   }
 }
